tests/rt/pos/ifc/nmifc/contrast-corrupt-endorse-no-nmifc.trp
(* NMIFC Contrast Test: Corrupt Label Endorsement WITHOUT NMIFC

   This test demonstrates that endorsement from a corrupt label SUCCEEDS
   when NMIFC is NOT enabled. This is the "unsafe" behavior that NMIFC prevents.

   The label {alice,bob} = <alice & bob; alice | bob> is corrupt because
   (alice | bob) does NOT imply (alice & bob).

   Without NMIFC: Only authority check is performed, which passes with root authority.
   With NMIFC: Transparency check fails (see transp-corrupt-label.trp in neg/ifc/nmifc/).

   This test runs WITHOUT --nmifc flag (no .options file).

   Expected: Endorsement succeeds, prints 42

   See: nmifc-summary.md for details on the transparency condition
*)

let val x = 42 raisedTo `{alice,bob}`
    (* {alice,bob} = <alice & bob; alice | bob> -- a corrupt label *)

    (* Endorse: change integrity to FALSE (trusted), preserve confidentiality as alice&bob *)
    (* This succeeds without NMIFC but would fail with NMIFC enabled *)
    val y = endorse (x, authority, `<alice&bob; #root-integrity>`)
    val _ = blockdown authority
in print y
end
